<resources>
    <string name="app_name">Info Seputar Covid-19</string>
    <string name="name">Tryo Asnafi</string>
    <string name="email">tryoasnafi@gmail.com</string>
    <string name="website">www.tryoasnafi.my.id</string>
    <string name="detail">Detail Informasi</string>
    <string name="source">Sumber Data</string>
    <string name="image">Image</string>
    <string name="category">Info Penting, Hoaks Buster</string>
    <string name="writer">oleh BNPB</string>
    <string name="date">Date - 20-02-2020</string>
    <string name="title">Judul Artikel</string>
    <string name="copyright">Copyright © 2020 Tryo Asnafi</string>
</resources>
