<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/header_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tv_item_title"
                fontPath="fonts/IBMPlexSans-Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="MissingPrefix"
                tools:text="@string/title" />


            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_title"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:textColor="@color/colorAccent"
                android:textStyle="italic"
                tools:text="@string/date" />

            <TextView
                android:id="@+id/tv_item_writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_title"
                android:layout_toEndOf="@id/tv_item_date"
                tools:text="@string/writer" />

            <ImageView
                android:id="@+id/img_category"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/tv_item_date"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_bookmark_24dp" />

            <TextView
                android:id="@+id/tv_item_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_date"
                android:layout_toEndOf="@id/img_category"
                android:textStyle="bold"
                tools:text="@string/category" />

        </RelativeLayout>


        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_detail"
            tools:src="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="8sp"
            android:paddingLeft="@dimen/margin_16dp"
            android:paddingRight="@dimen/margin_16dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_detail"
            tools:ignore="MissingConstraints"
            tools:targetApi="26"
            tools:text="@string/detail" />

        <TextView
            android:id="@+id/tv_item_site"
            fontPath="fonts/IBMPlexSans-Italic.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:background="@drawable/roundshape"
            android:backgroundTint="@color/colorAccent"
            android:paddingLeft="@dimen/margin_16dp"
            android:paddingTop="@dimen/margin_4dp"
            android:paddingRight="@dimen/margin_16dp"
            android:paddingBottom="@dimen/margin_8dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_detail"
            tools:ignore="MissingPrefix"
            tools:text="@string/source" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>