<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.AboutActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/about_background"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/margin_16dp"
        app:cardElevation="@dimen/margin_4dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/about_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/me"
            tools:src="@android:color/white" />

        <TextView
            android:id="@+id/about_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/about_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/about_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:text="@string/website"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="italic" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>